--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <header>
             <h1>FZKZ Final Project</h1>
-            <a href="./">Home</a>
+            <a href="./index.html">Home</a>
         </header>
     
         <div class="container">
-            <a href="./posts/sept23.html">sept23</a>
+            <a style="color: lightcoral;" href="./posts/First post/brainstorm.html">First post - Brainstorm - Sept 23, 2025</a>
         </div>
 
         <footer>
