Rename file systems

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
     
         <div class="container">
-            <a style="color: lightcoral;" href="./posts/First post/brainstorm.html">First post - Brainstorm - Sept 23, 2025</a>
+            <a style="color: lightcoral;" href="./posts/1-brainstorm/brainstorm.html">First post - Brainstorm - Sept 23, 2025</a>
         </div>
 
         <footer>
