--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
             </div>
             
             <div>
-                <a href="./posts/2-driving-questions/driving-questions.html">Second post - AI Brainstorm - Sept 23, 2025</a>
+                <a href="./posts/2-driving-questions/driving-questions.html">Second post - AI Brainstorm - Oct 13, 2025</a>
             </div>
 
             <div>
                 <a href="./posts/3-slides/slides.html">Third post - Slides for peer feedback - Oct 30, 2025</a>
+            </div>
+
+            <div>
+                <a href="./posts/4-gantt-chart-and-plan/gantt-chart-and-plan.html">Fourth post - Slides for peer feedback - Oct 30, 2025</a>
             </div>
         </div>
         
