Create research page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <div>
                 <a href="./posts/4-gantt-chart-and-plan/gantt-chart-and-plan.html">Fourth post - Slides for peer feedback - Oct 30, 2025</a>
             </div>
+
+            <div>
+                <a href="./posts/5-research/research.html">Fifth post - Research and Mind Map</a>
+            </div>
         </div>
         
 
