--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <div>
                 <a href="./posts/5-research/research.html">Fifth post - Research and Mind Map</a>
             </div>
+
+            <div>
+                <a href="./posts/6-primary-research-and-product/primary-research.html">Sixth post - Physical Product</a>
+            </div>
         </div>
         
 
