--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div>
-                <a href="./posts/4-gantt-chart-and-plan/gantt-chart-and-plan.html">Fourth post - Slides for peer feedback - Oct 30, 2025</a>
+                <a href="./posts/4-gantt-chart-and-plan/gantt-chart-and-plan.html">Fourth post - Secondary Research</a>
             </div>
 
             <div>
