Formating and styling and link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <div>
                 <a href="./posts/6-primary-research-and-product/primary-research.html">Sixth post - Physical Product</a>
             </div>
+
+            <div>
+                <a href="./posts/7-reflection/reflection.html">Final post - Reflection</a>
+            </div>
         </div>
         
 
